--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
   archivePrefix={arXiv},
   primaryClass={cs.LG},
   selected={true},
+  preview={both_iteration_150.png},
 }
 
 @inproceedings{
@@ -19,4 +20,5 @@
   year={2023},
   url={https://openreview.net/forum?id=Y7saIzVsgR},
   selected={true},
+  preview={motivation.pdf},
 }
