--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,5 +20,5 @@
   year={2023},
   url={https://openreview.net/forum?id=Y7saIzVsgR},
   selected={true},
-  preview={motivation.pdf},
+  preview={motivation.jpg},
 }
