--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
   primaryClass={cs.LG},
   selected={true},
   preview={both_iteration_150.png},
+  pdf={/assets/pdf/MCMCBO_L4DC.pdf},
 }
 
 @inproceedings{
