--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,4 +22,5 @@
   url={https://openreview.net/forum?id=Y7saIzVsgR},
   selected={true},
   preview={motivation.jpg},
+  pdf={/assets/pdf/preferential_multi_attribute.pdf},
 }
