--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
   primaryClass={cs.LG},
   selected={true},
   preview={both_iteration_150.png},
-  pdf={/assets/pdf/MCMCBO_L4DC.pdf},
+  pdf={MCMCBO_L4DC.pdf},
 }
 
 @inproceedings{
@@ -22,5 +22,5 @@
   url={https://openreview.net/forum?id=Y7saIzVsgR},
   selected={true},
   preview={motivation.jpg},
-  pdf={/assets/pdf/preferential_multi_attribute.pdf},
+  pdf={preferential_multi_attribute.pdf},
 }
