--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @InProceedings{pmlr-v242-yi24a,
   title = 	 {Improving sample efficiency of high dimensional Bayesian optimization with MCMC},
-  author =       {Yi, Zeji* and Wei, Yunyue* and Cheng, Chu Xin* and He, Kaibo and Sui, Yanan},
+  author =       {Yi*, Zeji and Wei*, Yunyue and Cheng*, Chu Xin and He, Kaibo and Sui, Yanan},
   booktitle = 	 {Proceedings of the 6th Annual Learning for Dynamics &amp; Control Conference},
   year = 	 {2024},
   series = 	 {Proceedings of Machine Learning Research},
