--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,14 @@
 ---
 ---
 
+@article{cheng2024practical,
+  title={Practical Bayesian Algorithm Execution via Posterior Sampling},
+  author={Cheng*, Chu Xin and Astudillo*, Raul and Desautels, Thomas and Yue, Yisong},
+  year={2024},
+  journal={Under review},
+  selected={true},
+}
+
 @InProceedings{pmlr-v242-yi24a,
   title = 	 {Improving sample efficiency of high dimensional Bayesian optimization with MCMC},
   author =       {Yi*, Zeji and Wei*, Yunyue and Cheng*, Chu Xin and He, Kaibo and Sui, Yanan},
@@ -30,3 +38,4 @@
   pdf = {https://arxiv.org/pdf/2406.14699},
   selected={true},
 }
+
