--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,7 @@
   author={Cheng*, Chu Xin and Astudillo*, Raul and Desautels, Thomas and Yue, Yisong},
   year={2024},
   journal={Under review},
+  preview={levelset.png},
   selected={true},
 }
 
