--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,22 @@
 ---
 ---
 
+@inproceedings{xiong2025atomic,
+  title={Atomic Diffusion Models for Small Molecule Structure Elucidation from NMR Spectra},
+  author={Xiong, Ziyu and Zhang, Yichi and Alauddin, Foyez and Cheng, Chu Xin and An, Joon Soo and Seyedsayamdost, Mohammad R. and Zhong, Ellen D},
+  booktitle={The Thirty-ninth Annual Conference on Neural Information Processing Systems},
+  year={2025},
+  url={https://openreview.net/forum?id=STsjfx2cee}
+}
+
+@misc{yu2025unlocktimeseriesediting,
+  title={How to Unlock Time Series Editing? Diffusion-Driven Approach with Multi-Grained Control}, 
+  author={Yu*, Hao and Cheng*, Chu Xin and Yu, Runlong and Ye, Yuyang and Tong, Shiwei and Liu, Zhaofeng and Lian, Defu},
+  year={2025},
+  arxiv={2506.05276},
+  url={https://arxiv.org/abs/2506.05276}, 
+}
+
 @inproceedings{cheng2024practical,
   title={Practical Bayesian Algorithm Execution via Posterior Sampling},
   author={Cheng*, Chu Xin and Astudillo*, Raul and Desautels, Thomas and Yue, Yisong},
