--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,7 @@
   title={Atomic Diffusion Models for Small Molecule Structure Elucidation from NMR Spectra},
   author={Xiong, Ziyu and Zhang, Yichi and Alauddin, Foyez and Cheng, Chu Xin and An, Joon Soo and Seyedsayamdost, Mohammad R. and Zhong, Ellen D},
   booktitle={The Thirty-ninth Annual Conference on Neural Information Processing Systems},
+  preview={product.png},
   year={2025},
   url={https://openreview.net/forum?id=STsjfx2cee}
 }
@@ -13,6 +14,7 @@
   title={How to Unlock Time Series Editing? Diffusion-Driven Approach with Multi-Grained Control}, 
   author={Yu*, Hao and Cheng*, Chu Xin and Yu, Runlong and Ye, Yuyang and Tong, Shiwei and Liu, Zhaofeng and Lian, Defu},
   year={2025},
+  preview={timeedit.png},
   arxiv={2506.05276},
   url={https://arxiv.org/abs/2506.05276}, 
 }
