--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   booktitle={The Thirty-ninth Annual Conference on Neural Information Processing Systems},
   preview={product.png},
   year={2025},
-  url={https://openreview.net/forum?id=STsjfx2cee}
+  pdf={https://openreview.net/forum?id=STsjfx2cee}
 }
 
 @misc{yu2025unlocktimeseriesediting,
